# py3d

./: LICENSE  README.md  dev_test.ipynb  environment.yml  pyproject.toml  setup.cfg  setup.py
src/py3d.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pyd3/: __init__.py  pyd3.py
