[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py3d"
version = "0.1.0"
authors = [
    { name = "Frank Liang", email = "your.email@example.com" },
]
description = "Python template for visualizing complex network data using d3.js"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/py3d"
"Bug Tracker" = "https://github.com/yourusername/py3d/issues" 